--- a/localisation/PRU_focus_l_english.yml
+++ b/localisation/PRU_focus_l_english.yml
@@ -42,16 +42,16 @@
  PRU_sphere_of_influence_desc:0 "In order to unify Germany, we have to be the predominant power in Central Europe and create a sphere of influence with the other german states."
  PRU_influence_saxony:0 "Influence Saxony"
  PRU_influence_saxony_desc:0 "Saxony will be incorporated in our sphere of influence."
- PRU_influence_hannover:0 "Influence Saxony"
- PRU_influence_hannover_desc:0 "Saxony will be incorporated in our sphere of influence."
- PRU_influence_cologne:0 "Influence Saxony"
- PRU_influence_cologne_desc:0 "Saxony will be incorporated in our sphere of influence."
- PRU_influence_hesse:0 "Influence Saxony"
- PRU_influence_hesse_desc:0 "Saxony will be incorporated in our sphere of influence."
- PRU_influence_wurttemberg:0 "Influence Saxony"
- PRU_influence_wurttemberg_desc:0 "Saxony will be incorporated in our sphere of influence."
- PRU_influence_bavaria:0 "Influence Saxony"
- PRU_influence_bavaria_desc:0 "Saxony will be incorporated in our sphere of influence."
+ PRU_influence_hannover:0 "Influence Hannover"
+ PRU_influence_hannover_desc:0 "Hannover will be incorporated in our sphere of influence."
+ PRU_influence_cologne:0 "Influence Cologne"
+ PRU_influence_cologne_desc:0 "Cologne will be incorporated in our sphere of influence."
+ PRU_influence_hesse:0 "Influence Hesse"
+ PRU_influence_hesse_desc:0 "Hesse will be incorporated in our sphere of influence."
+ PRU_influence_wurttermburg:0 "Influence Wurttemberg"
+ PRU_influence_wurttermburg_desc:0 "Wurttemberg will be incorporated in our sphere of influence."
+ PRU_influence_bavaria:0 "Influence Bavaria"
+ PRU_influence_bavaria_desc:0 "Bavaria will be incorporated in our sphere of influence."
  
  PRU_german_confederation:0 "German Confederation"
  PRU_german_confederation_desc:0 "Separated, we are weak. We must create a confederation of German states united for protection and defence."
